<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="475dp"
        android:layout_marginTop="1dp"
        android:padding="20sp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TabHost
        android:id="@+id/tablayout"
        android:layout_width="410dip"
        android:layout_height="700dip"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="725dp"
            android:background="#FFF1F1"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/Contents"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Bookmarks"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Notes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settinglayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:background="#FAF6F6"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="324dp"
            android:text="@string/font"
            android:textColor="#090909"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="20dp"
            android:text="@string/aa"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#B1B0B0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <SeekBar
            android:id="@+id/thicknessControl"
            android:layout_width="275dp"
            android:layout_height="15dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="36dp"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="15dp"
            android:text="Aa"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#090909"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="28dp"
            android:text="@string/align"
            android:textColor="#0C0000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ImageView
            android:id="@+id/alignLeft"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="260dp"
            android:contentDescription="@string/todo"
            android:onClick="left"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/alignCentre"
            app:layout_constraintTop_toBottomOf="@+id/thicknessControl"
            app:srcCompat="@drawable/ic_format_align_left_black_24dp" />

        <ImageView
            android:id="@+id/alignCentre"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="200dp"
            android:onClick="centre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toLeftOf="@id/alignRight"
            app:layout_constraintTop_toBottomOf="@+id/thicknessControl"
            app:srcCompat="@drawable/ic_format_align_center_black_24dp" />

        <ImageView
            android:id="@+id/alignRight"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="28dp"
            android:onClick="right"
            app:layout_constraintRight_toLeftOf="@id/alignJustified"
            app:layout_constraintTop_toBottomOf="@+id/thicknessControl"
            app:srcCompat="@drawable/ic_format_align_right_black_24dp" />

        <ImageView
            android:id="@+id/alignJustified"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="100dp"
            android:onClick="justified"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thicknessControl"
            app:srcCompat="@drawable/ic_format_align_justify_black_24dp" />

        <TextView
            android:id="@+id/lineSpacingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="296dp"
            android:padding="10dp"
            android:text="@string/line_spacing"
            android:textColor="#070101"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <ImageView
            android:id="@+id/line1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="224dp"
            android:onClick="line1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alignLeft"
            app:srcCompat="@drawable/ic_drag_handle_black_24dp" />

        <ImageView
            android:id="@+id/line2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="160dp"
            android:onClick="line2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alignCentre"
            app:srcCompat="@drawable/ic_menu_black_24dp" />

        <ImageView
            android:id="@+id/line3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="100dp"
            android:onClick="line3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alignRight"
            app:srcCompat="@drawable/ic_reorder_black_24dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:text="Mode"
            android:textColor="#070101"
            app:layout_constraintEnd_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/lineSpacingTextView" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="250dp"
            android:background="#000000"
            android:onClick="blackBG"
            android:text="Aa"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#FDFAFA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line1" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="150dp"
            android:onClick="whiteBG"
            android:text="Aa"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line2" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="50dp"
            android:background="#FFE6D9"
            android:onClick="semiwhiteBG"
            android:text="Aa"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#C21D08"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line3" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
            android:layout_marginEnd="41dp"
            android:text="Margin"
            android:textColor="#040000"
            app:layout_constraintEnd_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="34dp"
            android:background="#EFE8A7"
            android:onClick="margin1"
            android:text="Margin1"
            android:textColor="#090000"
            app:layout_constraintEnd_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="34dp"
            android:background="#EFE8A7"
            android:onClick="margin2"
            android:text="Margin 2"
            android:textColor="#090000"
            app:layout_constraintEnd_toStartOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="49dp"
            android:background="#EFE8A7"
            android:onClick="margin3"
            android:text="margin 3"
            android:textColor="#090000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>